# optimized-isl

./: .gitignore  CMakeLists.txt  main.cpp
benchmark/: benchmark.cc  benchmarks.h  delete.csv  insert.csv  isl_cartesian_bench.cc  isl_cgal_bench.cc  isl_self_bench.cc  plot.py  r.sh  search.csv
cmake/modules/: CodeCoverage.cmake
include/: Interval_cartesian_tree.h  Interval_skip_list.h  Interval_skip_list_interval.h  Level_interval.h
tests/: interval_skip_list_test.cc
utils/: utils.h
valgrind/: hist.py  memory_usage.cpp  r.sh
